retired/hyrax_tests/errors/NoSuchVariable.w10n
url = http://localhost:8080/opendap/w10n/data/nc/fnoc1.nc/k/
-s 
